<resources>
    <string name="app_name">Bazaar</string>
    <string name="key_is_first_session">key_is_first_session</string>
    <string name="key_is_signed_in">key_is_signed_in</string>
    <string name="id_pager_onboarding_page_1">id_pager_onboarding_page_1</string>
    <string name="id_pager_onboarding_page_2">id_pager_onboarding_page_2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_billing">Billing</string>
    <string name="empty_string" />
    <string name="oa_p1_heading">Welcome</string>
    <string name="oa_p1_quote">We are delighted to have you among us!</string>
    <string name="oa_p2_heading">Let\'s Shop</string>
    <string name="oa_p2_quote">We hope you have your shopping list ready!</string>
    <string name="oa_btn_get_started">Get Started</string>
    <string name="sia_heading">Sign In</string>
    <string name="sia_sub_heading">Welcome</string>
    <string name="sia_hint_email">Email</string>
    <string name="sia_hint_password">Password</string>
    <string name="sia_forgot_password">Forgot Password</string>
    <string name="sia_btn_sign_in">Sign In</string>
    <string name="sia_or">OR</string>
    <string name="sia_footnote">Don\'t have an account?</string>
    <string name="sia_sign_up">Sign Up</string>
    <string name="sua_heading">Sign Up</string>
    <string name="sua_sub_heading">Create a new account</string>
    <string name="sua_hint_email">Email</string>
    <string name="sua_hint_password">Password</string>
    <string name="sua_label_gender">Gender:</string>
    <string name="sua_label_male">Male</string>
    <string name="sua_label_female">Female</string>
    <string name="sua_hint_contact">Contact</string>
    <string name="sua_ckb_legal">I accept the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</string>
    <string name="sua_btn_sign_up">Sign Up</string>
    <string name="sua_footnote">Already have an account?</string>
    <string name="sua_signIn">Sign In</string>
    <string name="crt_tab_current">Current</string>
    <string name="crt_tab_history">History</string>
    <string name="crt_cur_title_total">TOTAL</string>
    <string name="crt_cur_rs">Rs.</string>
    <string name="crt_cur_default_price">0.00</string>
    <string name="crt_cur_btn_checkout">Checkout</string>
</resources>
